--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,25 @@
   background: -webkit-linear-gradient(to right, #A5FECB, #20BDFF, #5433FF);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #A5FECB, #20BDFF, #5433FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+.category-tabs{
+  background: linear-gradient(to right, #A5FECB, #20BDFF, #5433FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+.projects-grid{
+  display: flex;
+  justify-content:flex-start;
+}
+.projects-grid a{
+  text-decoration: none;
+}
+.category-tabs h5{
+  color: white;
 }
 
 .banner-text{
